k8s/apps/overlays/homelab/netsentinel/deployment-ngrok.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
spec:
  template:
    spec:
      containers:
        - name: ngrok
          args:
            [
              "http",
              "--log=stdout",
              "--domain=newly-advanced-dane.ngrok-free.app",
              "netsentinel-service:80",
            ]
