k8s/apps/overlays/homelab/netsentinel/app-route.patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: netsentinel-route
spec:
  to:
    kind: Service
    name: netsentinel-service
    weight: 100
